--- a/Tests/App.config
+++ b/Tests/App.config
@@ -1,32 +1,53 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <runtime>
         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
             <dependentAssembly>
                 <assemblyIdentity name="Moq"
                                   publicKeyToken="69f491c39445e920"
-                                  culture="neutral"/>
-                <bindingRedirect oldVersion="3.1.416.3"
-                                 newVersion="4.0.10827.0"/>
+                                  culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-4.0.10827.0"
+                                 newVersion="4.0.10827.0" />
             </dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="xunit"
                                   publicKeyToken="8d05b1bb7a6fdb6c"
-                                  culture="neutral"/>
+                                  culture="neutral" />
                 <bindingRedirect oldVersion="1.8.0.1545"
-                                 newVersion="1.8.0.1549"/>
+                                 newVersion="1.8.0.1549" />
             </dependentAssembly>
             <dependentAssembly>
                 <assemblyIdentity name="xunit.extensions"
                                   publicKeyToken="8d05b1bb7a6fdb6c"
-                                  culture="neutral"/>
-                <bindingRedirect oldVersion="1.6.1.1521"
-                                 newVersion="1.8.0.1545"/>
+                                  culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-1.9.2.1705"
+                                 newVersion="1.9.2.1705" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="Ploeh.AutoFixture"
+                                  publicKeyToken="b24654c590009d4f"
+                                  culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-3.21.1.0"
+                                 newVersion="3.21.1.0" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="Autofac"
+                                  publicKeyToken="17863af14b0044da"
+                                  culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-3.5.0.0"
+                                 newVersion="3.5.0.0" />
+            </dependentAssembly>
+            <dependentAssembly>
+                <assemblyIdentity name="System.Web.Mvc"
+                                  publicKeyToken="31bf3856ad364e35"
+                                  culture="neutral" />
+                <bindingRedirect oldVersion="0.0.0.0-5.2.2.0"
+                                 newVersion="5.2.2.0" />
             </dependentAssembly>
         </assemblyBinding>
     </runtime>
     <startup>
         <supportedRuntime version="v4.0"
-                          sku=".NETFramework,Version=v4.5"/>
+                          sku=".NETFramework,Version=v4.5" />
     </startup>
 </configuration>
