--- a/Tests/packages.config
+++ b/Tests/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Autofac" version="3.5.2" targetFramework="net45" />
-  <package id="AutoFixture" version="2.4.0" />
-  <package id="AutoFixture.AutoMoq" version="2.4.0" />
-  <package id="AutoFixture.Xunit" version="2.4.0" />
+  <package id="AutoFixture" version="3.21.1" targetFramework="net45" />
+  <package id="AutoFixture.AutoMoq" version="3.21.1" targetFramework="net45" />
+  <package id="AutoFixture.Xunit" version="3.21.1" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.0" targetFramework="net45" />
   <package id="EntityFramework" version="4.1.10715.0" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.2" targetFramework="net45" />
@@ -11,6 +11,6 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.2" targetFramework="net45" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Moq" version="4.0.10827" targetFramework="net45" />
-  <package id="xunit" version="1.8.0.1549" />
-  <package id="xunit.extensions" version="1.8.0.1545" />
+  <package id="xunit" version="1.9.2" targetFramework="net45" />
+  <package id="xunit.extensions" version="1.9.2" targetFramework="net45" />
 </packages>
